Correct Josef Casing section

--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,2 +1,3 @@
-Throughout history sailing has been a key ingredient to our civilization, trading, fishing, exploring, transporting, i.e. today's civilization would not have been the same if sailing wasn't invented. Today sailing has been developed more into a hobby from large sailing boats all the way down to one-man dinghies. 
-This system is developed to help the skipper on dinghies to make better decisions, for both experienced and novices sailors. This is achieved using inexpensive sensors and then give the skipper feedback using graphics, sound, and vibrations through an android application. Measurements are done on forces exerted on the centerboard, tilt of the dinghy, position, and velocity. The design has been focused on energy efficiency, waterproof and easy-to-handle.
+Throughout history, sailing has been a key ingredient to our civilization. Whether for trading, fishing, exploring, or transporting, today's civilization would not have been the same if sailing was not invented. Today sailing has been developed more into a hobby from large sailing boats all the way down to one-man dinghies. 
+
+The \project system was developed to help the skipper on dinghies to make better decisions, for both experienced and novices sailors. This could be achieved using inexpensive sensors to give the skipper feedback using graphics, sound, and vibrations through an Android phone application. Measurements were done on forces exerted on the centerboard, tilt of the dinghy, position, and velocity. The design was focused on being energy efficient, waterproof and easy to handle.
