--- a/report/casing.tex
+++ b/report/casing.tex
@@ -1,14 +1,14 @@
 
-This system has some different types of components and sensors, which all need to be housed in a watertight casing for security and robustness. Some design ideas for this part was to make it easy to mount, small physical footprint, all the electronics in the same enclosure and watertight.  
-The case will be revised and worked on over the whole length of the course, redefining and remodeling the construction over time.  
-The cases are constructed with the use of the program Fusion 360, which is a free to use \gls{cad} software. They are then produced by using a 3D printer, which is a fast and easy way of try out different ideas and models.   
+The \project~system has some different types of components and sensors, which all need to be housed in a watertight casing for security and robustness. Some design ideas for this part was to make it easy to mount, small physical footprint, all the electronics in the same enclosure and watertight.
+The case was revised and worked on over the whole length of the course, redefining and remodeling the construction over time.
+The cases were constructed with the use of the program Fusion 360, which is a free to use \gls{cad} software. They were then produced by using a 3D printer, which is a fast and easy way of try out different ideas and models.
 
 %% Första versionen -------------------------
 \subsection{First revision}
-First, a suitable solution was needed, with no thoughts about physical limitations, strength, material or manufacturability.  
+First, a suitable solution was needed, with no thoughts about physical limitations, strength, material or manufacturability.
 
-The idea was modeled around the original mounting plate which is already fastened to the boat, which has the function to hold the board in place and make the daggerboard stable in the boat. The model had the same dimension as the original plate, only the height was different to accommodate the size of the pressure sensors. By making a mounting plate with the same width and length of the original mounting plate the implementation would be neat and space saving. 
-This one had some problems, one of them is that the case is too big for any of the 3D-printers that we had access to. Another problem with this instance of the model was that for the circuit boards to fit inside they had to be very small and have some odd shapes.  
+The idea was modeled around the original mounting plate which is already fastened to the boat, which has the function to hold the board in place and make the daggerboard stable in the boat. The model had the same dimension as the original plate, only the height was different to accommodate the size of the pressure sensors. By making a mounting plate with the same width and length of the original mounting plate the implementation would be neat and space saving.
+This one had some problems, one of them was that the case was too big for any of the 3D-printers available. Another problem with this instance of the model was that for the circuit boards to fit inside they had to be very small and have some odd shapes.
 
 % Kolla på mina bilder
 
@@ -23,7 +23,7 @@ This one had some problems, one of them is that the case is too big for any of t
 
 %% Andra versionen -------------------------
 \subsection{Second revision}
-The next revision was like the first one, it had the same shape and idea as the first one by having the same size as the original plate, but this time it only consisted of the front part that holds the sensors and all the electronics. This version can thus be made on a 3D-printer. It still has the problem of having very little space for all the components.    
+The next revision was like the first one, it had the same shape and idea as the first one by having the same size as the original plate, but this time it only consisted of the front part that holds the sensors and all the electronics. This version could thus be made on a 3D-printer. It still had the problem of having very little space for all the components.
 
 % Kolla på mina bilder
 \begin{figure}[H]
@@ -36,12 +36,13 @@ The next revision was like the first one, it had the same shape and idea as the 
 
 %% Tredje versionen -------------------------
 \subsection{Third revision}
-With all the prior knowledge, the next version was modeled. This time it had a much larger casing to accommodate for the \gls{pcb}. The actual size of the \gls{pcb} was set by the inner dimensions of this part.  
+With all the prior knowledge, the next version was modeled. This time it had a much larger casing to accommodate for the \gls{pcb}. The actual size of the \gls{pcb} was set by the inner dimensions of this part.
 
-This case still had some problems, it did neither include a holder for the distance sensor nor being watertight. But this version was also good in many aspects. The size of the part was enough to accommodate for the \gls{pcb}, batteries and all the sensors.  
-This part was created using a 3D-printer to have some progress to show, check for design faults and to determine improvements for the next version.  
-Due to the fundamental workings of a 3D-printer the size and dimension on the real produced part differed some from the \gls{cad} model. When construction with a 3D-printer the model needs to be compensated for this. One thing that needed to be revised was the implementation of the steel beads.  
-When building the third version on the 3D-printer the problems with the model could be more easily determined than only looking at a design in a \gls{cad} software. The process of improving the design is both about the physical limitations and the issues  due to the manufacturing process. 
+This case still had some problems, it did neither include a holder for the distance sensor nor being watertight. But this version was also good in many aspects. The size of the part was enough to accommodate for the \gls{pcb}, batteries and all the sensors. The part was created using a 3D-printer to have some progress to show, check for design faults and to determine improvements for the next version.
+
+Due to the fundamental workings of a 3D-printer the size and dimension on the real produced part differed some from the \gls{cad} model. When construction with a 3D-printer the model needs to be compensated for this. One thing that needed to be revised was the implementation of the steel beads.
+
+When building the third version on the 3D-printer the problems with the model could be more easily determined than only looking at a design in a \gls{cad} software. The process of improving the design is both about the physical limitations and the issues  due to the manufacturing process.
 
 % Kolla på mina bilder
 
@@ -55,7 +56,8 @@ When building the third version on the 3D-printer the problems with the model co
 
 \subsection{Fourth revision}
 
-The fourth revision have all the features and can hold all the electronics. It's been designed to house the power switch in the front, the Time of Flight sensor on the top, the load cells, the batteries and both the \gls{pcb}s in the same enclosure. The access panel has been placed at the underside of the model to get a better water seal. The access panel is a big plate covering the most part of the underside of the model. To ensure it's watertight there a seal between the panel and the casing itself could be implemented.
+The fourth revision had all the features and could hold all the electronics. It was designed to house the power switch in the front, the Time of Flight sensor on the top, the load cells, the batteries and both the \gls{pcb}s in the same enclosure. The access panel was placed at the underside of the model to get a better water seal. The access panel was a big plate covering the most part of the underside of the model. To ensure it was watertight there, a seal between the panel and the casing itself could be added.
+
 Due to the material cost and time it takes for the 3D printer to produce models the manufactured part has just some thin layers in the bottom part of the print. To get the some strength in the model epoxy resin was mixed and poured in to both get the stability needed and a clear window for the Time of Flight sensor.
 
 \subsubsection{The prototype}
@@ -70,6 +72,5 @@ Due to the material cost and time it takes for the 3D printer to produce models 
 \end{figure}
 
 \subsection{Results}
-The final version is the product of many revised and improved steps. The model holds all the electronics and sensors in the same enclosure and takes up as small physical space as possible.
-The model is not water tight, the only attempt made to this is the rubber seal between the load cell and the steel beads used to measure the forces and the power button in the front.
+The final version is the product of many revised and improved steps. The model holds all the electronics and sensors in the same enclosure and takes up as small physical space as possible. The model is not water tight, the only attempt made to this is the rubber seal between the load cell and the steel beads used to measure the forces and the power button in the front.
 
