--- a/report/main.tex
+++ b/report/main.tex
@@ -122,7 +122,7 @@
 
 \clearpage
 \section{Casing}\label{sec:case}
-\chapterauthor{Lundberg, Josef (One, No )}
+\chapterauthor{Lundberg, Josef (Sjölund, Johannes)}
 \input{casing.tex}
 
 \clearpage
