--- a/report/android.tex
+++ b/report/android.tex
@@ -50,7 +50,7 @@ It was determined that the visual feedback provided to the user was to include v
 \item [\ref{feedback-pressure} \textbf{Pressure}] moves a pin along a colored bar to represent high of low pressure applied on the centerboard.
 \item [\ref{feedback-compass} \textbf{Bearing}] rotates a compass to show the ship relative bearing against true north.
 \item [\ref{feedback-map} \textbf{Map}] displays current location of the ship.
-\item [\ref{feedback-drift} \textbf{Drift}] is represented with a colored bar containing two arrows that moves to the relative drift direction to show the sailor if the ship was holding it's set navigational reference.
+\item [\ref{feedback-drift} \textbf{Drift}] is represented with a colored bar containing two arrows that moves to the relative drift direction to show the sailor if the ship was holding its set navigational reference.
 \item [\ref{feedback-height} \textbf{Speed}] displays a speedometer from a classical Swedish vehicle\cite{volvo} with a movable bar representing speed over ground.
 \item [\ref{feedback-sog} \textbf{Height}] of the centerboard is represented with a visual centerboard moving up and down along a graphical ruler.
 \item [\ref{feedback-wave} \textbf{Wave frequency}] displays a wave moving towards a ship at a speed representing different period of the waves.
