--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -363,3 +363,10 @@ first={Strapdown Inertial Navigation System (SINS)\glsadd{sinsg}}, see=[Glossary
 \newglossaryentry{dcm}{type=\acronymtype, name={DCM}, 
 description={Direction Cosine Matrix}, 
 first={Direction Cosine Matrix (DCM)\glsadd{dcmg}}, see=[Glossary:]{dcmg}}
+
+%%% 2s
+\newglossaryentry{2sg}{name={2s},
+    description={Number of batteries connected in series.}}
+\newglossaryentry{2s}{type=\acronymtype, name={2s}, 
+description={Series connection}, 
+first={2s\glsadd{2sg}}, see=[Glossary:]{2sg}}
