--- a/report/references.tex
+++ b/report/references.tex
@@ -3,8 +3,9 @@
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
 % Reference to casing cad software missing
-\bibitem{cad}
-% Reference to software used to develop battery circuit missing
+\bibitem{bqStudio}
+Battery Management Studio (bqStudio) offers a full suite of robust tools to assist with the process of evaluating, designing with, configuring, testing, or otherwise utilizing TI Battery management products. \url{http://www.ti.com/tool/bqstudio}
+
 \bibitem{onlineCad}
 
 \bibitem{stm32cubemx}
@@ -116,19 +117,19 @@ Estimation, Control, and the Discrete Kalman Filter, 1989. Donald E. Catlin
 \bibitem{pertubation}
   \url{https://en.wikipedia.org/wiki/Perturbation_theory}
 
-\bibitem{book26}
+\bibitem{book}[p.26-27]
 Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.26-27). Boston: Artech House. 
 
-\bibitem{book111}
+\bibitem{book}[p.111]
 Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111). Boston: Artech House. 
 
-\bibitem{book112}
+\bibitem{book}[p.111-112]
 Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111-112). Boston: Artech House.
 
-\bibitem{book183}
+\bibitem{book}[p.183-185]
 Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.183-185). Boston: Artech House.
 
-\bibitem{book35}
+\bibitem{book}[p.35-38]
 Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.35-38). Boston: Artech House.
 
 \bibitem{webpage}
